--- a/app.html
+++ b/app.html
@@ -8,10 +8,8 @@
 	</head>
 	<body>
 	    <div id="home" class="view">
-	        <input type=text placeholder="artist name"> <div class="button"></div>
+	        <input type=text placeholder="artist name">
 	    </div>
-	    <div id="artist-search" class="view"></div>
-        
 		<div id="artist-overview" class="view">
 		    <div class="col1">
 		    	<div class="toolbar">
@@ -53,6 +51,8 @@
 		
 		<script type="application/x-shockwave-flash" src="libs/air/applicationupdater_ui.swf" />
 		<script src="libs/air/AIRAliases.js"></script>
+		<script src="libs/air/AIRIntrospector.js"></script>
+
         <script src="assets/init.js"></script>
         <script src="assets/helpers.js"></script>
         
