main layout changes

--- a/app.html
+++ b/app.html
@@ -36,8 +36,11 @@
 	            </div>	
 			</div>
 			<div class="col2">
-			    <div class="head"></div>
+				<div class="head">Albums</div>
+				<div class="artist-releases"></div>
+			    <div class="head">Top Tracks</div>
 				<div class="artist-tracks"></div>	
+
 			</div>	
 		    <div class="col3">		  
 				<div class="head">Tracks</div>
