--- a/app.html
+++ b/app.html
@@ -56,6 +56,7 @@
 		<script src="libs/air/AIRAliases.js"></script>
 		<script src="libs/air/AIRIntrospector.js"></script>
 
+        <script src="assets/config.js"></script>
         <script src="assets/init.js"></script>
         <script src="assets/helpers.js"></script>
         
