redesign, new look

--- a/app.html
+++ b/app.html
@@ -43,7 +43,7 @@
 
 			</div>	
 		    <div class="col3">		  
-				<div class="head">Tracks</div>
+				<div class="head">Remixes</div>
 		    	<div class="tracks-sources"></div>
 				<div class="head">Bitrate</div>
 				<div class="tracks-bitrate"></div>
