better menu handling

--- a/app.html
+++ b/app.html
@@ -37,7 +37,7 @@
 			</div>
 			<div class="col2">
 				<div class="head">Albums</div>
-				<div class="artist-releases"></div>
+				<div class="artist-albums"></div>
 			    <div class="head">Top Tracks</div>
 				<div class="artist-tracks"></div>	
 
